# rmsx

./: .adk_nonprotein_only.xtc_offsets.npz  README.md  RMSX_FlipBook_Quickstart.ipynb  adk_nonprotein_only.xtc  pyproject.toml  revisions.ipynb  test.tcl
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
rmsx/: __init__.py  cli.py  core.py  core_backup.py  flipbook.py  plotting.py
rmsx/addons/: README.md  lddt.py
rmsx/r_scripts/: plot_rmsx.R
rmsx/vmd_scripts/: __init__.py  grid_color_scale_centered_xaxis_hotkeys.tcl  render_flipbook_4k.tcl  render_flipbook_8k.tcl  vmd_finder.py  wait_to_load.tcl
test_files/example_uqb_lddt/chain_7_lddtmap/: lddt_mon_sys_0.015_ns.csv  rmsd.csv  rmsf.csv
test_files/protease_lddt/chain_A_lddtmap/: lddt_short_protease_backbone_4.799_ns.csv  lddt_short_protease_backbone_4.992_ns.csv  lddt_short_protease_backbone_4.995_ns.csv  rmsd.csv  rmsf.csv
test_files/protease_lddt/chain_B_lddtmap/: lddt_short_protease_backbone_4.799_ns.csv  lddt_short_protease_backbone_4.992_ns.csv  lddt_short_protease_backbone_4.995_ns.csv  rmsd.csv  rmsf.csv
tests/: test_notebook_safety.py
